// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correct form for failed state for resetting password 1`] = `
.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: rgba(255, 98, 87, 0.1);
  border: 2px solid #FF6257;
  border-radius: 8px;
  box-shadow: none;
  justify-content: normal;
  width: 100%;
}

.c6 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c10:focus-visible,
.teleport-button__force-focus-visible .c10 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c10:hover,
.teleport-button__force-hover .c10 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c10:active,
.teleport-button__force-active .c10 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c10:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c9 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c9:hover,
.c9:focus,
.c9:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c9::-ms-clear {
  display: none;
}

.c9::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c9:read-only {
  cursor: not-allowed;
}

.c9:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c8 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  margin-bottom: 0;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  color: rgba(255, 255, 255, 0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        2
         of 
        3
      </div>
      <h2
        class="c5"
      >
        Create a New Password
      </h2>
    </div>
  </div>
  <div
    class="c6"
    kind="outline-danger"
    width="100%"
  >
    failed to reset password
  </div>
  <div
    class="c7"
  >
    <label
      class="c8"
    >
      New Password
      <input
        autocomplete="off"
        class="c9"
        inputmode="text"
        placeholder="Password"
        type="password"
        value=""
      />
    </label>
  </div>
  <div
    class="c7"
  >
    <label
      class="c8"
    >
      Confirm New Password
      <input
        autocomplete="off"
        class="c9"
        inputmode="text"
        placeholder="Confirm Password"
        type="password"
        value=""
      />
    </label>
  </div>
  <button
    class="c10"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;

exports[`render correct form for resetting password 1`] = `
.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 24px;
  width: 512px;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c3 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 40px;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.175px;
  width: 100%;
}

.c9:focus-visible,
.teleport-button__force-focus-visible .c9 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c9:hover,
.teleport-button__force-hover .c9 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c9:active,
.teleport-button__force-active .c9 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c9:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px rgba(0, 0, 0, 0.14),0px 1px 18px rgba(0, 0, 0, 0.12);
  border-radius: 8px;
  background-color: #222C59;
}

.c8 {
  appearance: none;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  background: #222C59;
  color: #FFFFFF;
  margin-top: 4px;
}

.c8:hover,
.c8:focus,
.c8:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  color: rgba(255, 255, 255, 0.54);
  opacity: 1;
}

.c8:read-only {
  cursor: not-allowed;
}

.c8:disabled {
  color: rgba(255, 255, 255, 0.36);
  border-color: rgba(255, 255, 255, 0.36);
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
  margin-bottom: 0;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  color: rgba(255, 255, 255, 0.72);
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

<form
  class="c0 c1"
  width="512px"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
        color="text.slightlyMuted"
      >
        Step 
        2
         of 
        3
      </div>
      <h2
        class="c5"
      >
        Create a New Password
      </h2>
    </div>
  </div>
  <div
    class="c6"
  >
    <label
      class="c7"
    >
      New Password
      <input
        autocomplete="off"
        class="c8"
        inputmode="text"
        placeholder="Password"
        type="password"
        value=""
      />
    </label>
  </div>
  <div
    class="c6"
  >
    <label
      class="c7"
    >
      Confirm New Password
      <input
        autocomplete="off"
        class="c8"
        inputmode="text"
        placeholder="Confirm Password"
        type="password"
        value=""
      />
    </label>
  </div>
  <button
    class="c9"
    fill="filled"
    type="submit"
    width="100%"
  >
    Continue
  </button>
</form>
`;
